alpha key checkout

--- a/components/keys/keys.jade
+++ b/components/keys/keys.jade
@@ -77,7 +77,7 @@ template(name='keys')
                                 i.remove.icon
                         td 
                             if checked_out
-                                .ui.blue.basic.label Checked Out
+                                .ui.blue.label Checked Out
                             else
                                 .ui.basic.label Checked In
                         td 
