alpha posts, staff section

--- a/client/fields/fields.jade
+++ b/client/fields/fields.jade
@@ -32,7 +32,7 @@ template(name='complete')
         #mark_complete.ui.button(class=complete_class) Yes 
         #mark_incomplete.ui.button(class=incomplete_class) No 
 
-template(name='staff')            
+template(name='staff_field')            
     .field
         label Staff
         input#staff(type='text' value=staff)        
