--- a/components/home/home.jade
+++ b/components/home/home.jade
@@ -1,24 +1,54 @@
 template(name='home')
-    .ui.two.column.grid.container
+    .ui.three.column.grid.container
         .column
             .ui.segment
-                h2.ui.header
+                h3.ui.header
                     |Pool
-                h3.ui.header Status: 
+                h4.ui.header Status: 
                     .ui.basic.green.label Operational
-                h3.ui.header Most Recent Reading: 
+                h4.ui.header Most Recent Reading: 
                 
             .ui.segment
-                h2.ui.header 
+                h3.ui.header 
                     |Outdoor Hot Tub
-                h3.ui.header Status: 
+                h4.ui.header Status: 
                     .ui.basic.green.label Operational
-                h3.ui.header Most Recent Reading: 
+                h4.ui.header Most Recent Reading: 
             .ui.segment
-                h2.ui.header
+                h3.ui.header
                     |Indoor Hot Tub
-                h3.ui.header Status: 
+                h4.ui.header Status: 
                     .ui.basic.green.label Operational
-                h3.ui.header Most Recent Reading: 
+                h4.ui.header Most Recent Reading: 
         .column
-        
+            .ui.segment
+                .ui.header Notices
+                    h4 Front Desk Hiring
+                    h4 Bike Policy
+                    
+        .column
+            .ui.segment
+                .ui.dividing.header Health Club Hours
+                .ui.list
+                    .item
+                        .header Sunday
+                        .content 8am-10pm
+                    .item
+                        .header Monday
+                        .content 7am-10pm
+                    .item
+                        .header Tuesday
+                        .content 7am-10pm
+                    .item
+                        .header Wednesday
+                        .content 7am-10pm
+                    .item
+                        .header Thursday
+                        .content 7am-10pm
+                    .item
+                        .header Friday
+                        .content 7am-9pm
+                    .item
+                        .header Saturday
+                        .content 8am-9pm
+                        
