--- a/components/staff/tasks/tasks.jade
+++ b/components/staff/tasks/tasks.jade
@@ -8,7 +8,7 @@ template(name='edit_task')
                 .field
                     label Location
                     input#location(type='text' value=location)
-                +staff
+                +staff_field
                 +due_date
                 .ui.segment
                     +complete
