--- a/client/templates.jade
+++ b/client/templates.jade
@@ -36,6 +36,7 @@ template(name='layout')
                     .ui.basic.fluid.segment
                         +Template.dynamic template=cloud
                         +Template.dynamic template=sub_nav
+                        +Template.dynamic template=sub_sub_nav
                         +Template.dynamic template=main
 
 
