--- a/components/staff/bikes/bikes.jade
+++ b/components/staff/bikes/bikes.jade
@@ -1,6 +1,6 @@
 template(name='bikes')
     .ui.container
-        .ui.center.aligned.header Impounded Bikes
+        h1.ui.center.aligned.header Impounded Bikes
             i#add_impounded_bike.green.plus.link.icon 
         +cloud filter='bike'
         .ui.centered.cards
