--- a/components/cloud/cloud.tpl.jade
+++ b/components/cloud/cloud.tpl.jade
@@ -4,11 +4,11 @@
         +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
     // .ui.hidden.fitted.divider
     if selected_tags
-        #clear_tags.ui.primary.icon.circular.large.button
+        #clear_tags.ui.primary.icon.large.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.primary.circular.large.button
+            .unselect_tag.ui.primary.large.button
                 strong #{this}
     each all_tags
-        .ui.circular.basic.button.select_tag(class=cloud_tag_class) 
+        .ui.basic.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
