convert readings to docs and make common templates

--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,4 +1,4 @@
-.ui.inverted.borderless.stackable.top.attached.menu
+.ui.inverted.borderless.stackable.top.attached.large.menu
     a.toggle_sidebar.mobile.only.header.item
         i.sidebar.icon
         | Gold Run
