--- a/components/staff/front_desk/front_desk.jade
+++ b/components/staff/front_desk/front_desk.jade
@@ -34,30 +34,51 @@ template(name='schedule')
                 tr
                     td Morning 7am-12pm
                     td 
+                        +facet_staff_select tags='shift,sunday,morning'
                     td 
+                        +facet_staff_select tags='shift,monday,morning'
                     td 
+                        +facet_staff_select tags='shift,tuesday,morning'
                     td 
+                        +facet_staff_select tags='shift,wednesday,morning'
                     td 
+                        +facet_staff_select tags='shift,thursday,morning'
                     td 
+                        +facet_staff_select tags='shift,friday,morning'
                     td 
+                        +facet_staff_select tags='shift,saturday,morning'
                 tr
                     td Afternoon 12pm-4pm
                     td 
+                        +facet_staff_select tags='shift,sunday,afternoon'
                     td 
+                        +facet_staff_select tags='shift,monday,afternoon'
                     td 
+                        +facet_staff_select tags='shift,tuesday,afternoon'
                     td 
+                        +facet_staff_select tags='shift,wednesday,afternoon'
                     td 
+                        +facet_staff_select tags='shift,thursday,afternoon'
                     td 
+                        +facet_staff_select tags='shift,friday,afternoon'
                     td 
+                        +facet_staff_select tags='shift,saturday,afternoon'
                 tr
                     td Evening 4pm-9pm
                     td 
+                        +facet_staff_select tags='shift,sunday,evening'
                     td 
+                        +facet_staff_select tags='shift,monday,evening'
                     td 
+                        +facet_staff_select tags='shift,tuesday,evening'
                     td 
+                        +facet_staff_select tags='shift,wednesday,evening'
                     td 
+                        +facet_staff_select tags='shift,thursday,evening'
                     td 
+                        +facet_staff_select tags='shift,friday,evening'
                     td 
+                        +facet_staff_select tags='shift,saturday,evening'
 
 
 
