--- a/components/staff/readings/readings.jade
+++ b/components/staff/readings/readings.jade
@@ -1,8 +1,8 @@
-template(name='readings')
+template(name='all_readings')
     .ui.container
-        +indoor_hot_tub_readings
-        +outdoor_hot_tub_readings
-        +pool_readings
+        +readings location='indoor_hot_tub'
+        +readings location='outdoor_hot_tub'
+        +readings location='pool'
 
 template(name='reading_menu')
     .ui.three.item.menu
@@ -11,131 +11,54 @@ template(name='reading_menu')
         a.item(href='/readings/pool' class="{{isActivePath '/readings/pool'}}") Pool
 
 
-template(name='edit_pool_reading')
+template(name='edit_reading')
     with reading
         .ui.container
             .ui.header Edit Reading
             .ui.form
-                +ph
-                +chlorine
-                +temperature
-                +alkalinity
-                +notes
-                a.ui.green.fluid.button(href='/readings') Save Pool Reading
-                +delete_reading_button
-            
-template(name='edit_hot_tub_reading')
-    with reading
-        .ui.container
-            .ui.header Edit Hot Tub Reading
-            .ui.form
                 .field
-                    label Location: #{location}
-                +br
-                +ph
-                +temperature
+                    label Location
+                    .ui.basic.black.label #{location}
+                .fields
+                    +ph
+                    +chlorine
+                    +temperature
+                // +alkalinity
                 +notes
-                a.ui.green.fluid.button(href='/readings') Save Hot Tub Reading
+                a.ui.green.large.button(href='/readings') Save Reading
                 +delete_reading_button
             
             
             
             
-template(name='indoor_hot_tub_readings')    
-    .ui.header Indoor Hot Tub Readings
-        i#add_indoor_hot_tub_reading.green.plus.link.icon
+            
+template(name='readings')    
+    .ui.header #{readings_label} Readings
+        i#add_reading.green.plus.link.icon
         // |Add Indoor Hot Tub Reading
 
     table.ui.sortable.striped.table
         thead
             tr
                 th pH
-                th Br
+                th Cl/Br
                 th Temperature
                 th Notes
                 th Read By
                 th Actions
         tbody
-            each indoor_hot_tub_readings
+            each readings
                 tr
                     td #{ph}
-                    td #{br}
+                    td #{chlorine}
                     td #{temperature}
                     td #{notes}
                     td #{author.username} #{when}
                     td 
-                        a.ui.compact.button(href="/hot_tub_reading/edit/#{_id}")
+                        a.ui.basic.button(href="/reading/edit/#{_id}")
                             i.pencil.icon
                             | Edit
 
-            
-template(name='outdoor_hot_tub_readings')   
-    .ui.header Outdoor Hot Tub Readings
-        i#add_outdoor_hot_tub_reading.green.plus.link.icon
-            // |Add Outdoor Hot Tub Reading
-
-    table.ui.sortable.striped.table
-        thead
-            tr
-                th pH
-                th Br
-                th Temperature
-                th Notes
-                th Read By
-                th Actions
-        tbody
-            each outdoor_hot_tub_readings
-                tr
-                    td #{ph}
-                    td #{br}
-                    td #{temperature}
-                    td #{notes}
-                    td #{author.username} #{when}
-                    td 
-                        a.ui.compact.button(href="/hot_tub_reading/edit/#{_id}")
-                            i.pencil.icon
-                            | Edit
-
-            
-            
-template(name='pool_readings') 
-    .ui.header Pool Readings
-        i#add_pool_reading.green.plus.link.icon 
-        // |Add Pool Reading
-    table.ui.sortable.striped.table
-        thead
-            tr
-                th pH
-                th Br
-                th Alkalinity
-                th Temperature
-                th Notes
-                th Read By
-                th Actions
-        tbody
-            each pool_readings
-                tr
-                    td #{ph}
-                    td #{br}
-                    td #{alkalinity}
-                    td #{temperature}
-                    td #{notes}
-                    td #{author.username} #{when}
-                    td 
-                        a.ui.compact.button(href="/pool_reading/edit/#{_id}")
-                            i.pencil.icon
-                            | Edit
-
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
             
 template(name='ph')            
     .field
