convert buildings to docs

--- a/components/nav/nav.tpl.jade
+++ b/components/nav/nav.tpl.jade
@@ -1,4 +1,4 @@
-.ui.inverted.borderless.stackable.top.attached.large.menu
+.ui.inverted.borderless.stackable.top.attached.menu
     a.toggle_sidebar.mobile.only.header.item
         i.sidebar.icon
         | Gold Run
@@ -10,6 +10,18 @@
     a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
         i.users.icon
         |People
+    a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        i.users.icon
+        |Community
+    a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        i.calendar.icon
+        |Events
+    a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        i.shopping.bag.icon
+        |Classifieds
+    a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        i.comments.outline.icon
+        |Disccussion
     a.mobile.hidden.item(href='/posts' class="{{isActivePath '/posts'}}")
         i.sticky.note.outline.icon
         |Posts
