convert people to docs

--- a/components/people/people.jade
+++ b/components/people/people.jade
@@ -58,6 +58,7 @@ template(name='edit_person')
             
 template(name='people') 
     .ui.container
+        #convert.ui.button convert
         h1.ui.center.aligned.header People
             i#add_person.green.plus.link.icon 
             // |Add Pool Reading
