--- a/components/cloud/cloud.tpl.jade
+++ b/components/cloud/cloud.tpl.jade
@@ -4,10 +4,10 @@
         +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
     // .ui.hidden.fitted.divider
     if selected_tags
-        #clear_tags.ui.primary.icon.large.button
+        #clear_tags.ui.active.icon.large.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.primary.large.button
+            .unselect_tag.ui.active.large.button
                 strong #{this}
     each all_tags
         .ui.basic.button.select_tag(class=cloud_tag_class) 
