--- a/components/staff/requests/requests.jade
+++ b/components/staff/requests/requests.jade
@@ -23,8 +23,10 @@ template(name='request')
     tr
         td #{author.username}
         td #{request_date}
-        td #{request_shift}
+        td #{shift}
         td #{sub}
+            if can_sub
+                .ui.button Sign Up
         td #{when}
         td 
             if approved
@@ -54,13 +56,15 @@ template(name='edit_request')
                     label Request Date
                     input#request_date(type='date' value=request_date)
                 .field
-                    label Request Shift
+                    label Request Shift:
+                        .ui.large.basic.label #{shift}
+                    |Change:
                     .ui.buttons
-                        .ui.button.shift Morning
-                        .ui.button.shift Afternoon
-                        .ui.button.shift Evening
-                    
-                a.ui.green.large.button(href='/requests') Save Time Off Request
-                #delete_request.ui.red.icon.button
-                    i.trash.icon
+                        .ui.basic.button.shift(class=shift_button_class data-value='morning') Morning
+                        .ui.basic.button.shift(class=shift_button_class data-value='afternoon') Afternoon
+                        .ui.basic.button.shift(class=shift_button_class data-value='evening') Evening
+                .ui.basic.center.aligned.segment        
+                    a.ui.green.large.button(href='/requests') Save Time Off Request
+                    #delete_request.ui.red.icon.button
+                        i.trash.icon
             
